Fixed options gap in catalog filters

--- a/frontend/src/styles/Catalog/CatalogFilter.scss
+++ b/frontend/src/styles/Catalog/CatalogFilter.scss
@@ -123,8 +123,9 @@
 }
 
 .options-group {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: repeat(auto-fill, 1fr);
+  grid-gap: 5px;
   margin-bottom: 5px;
 
   &.options-group_genres {
